--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <li><a href="#">Projects</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="#">Eric</a></li>
           </ul>
 
           <div class="d-inline-flex align-items-center">
